tests/simple_tests/syntaxError/deuxPointsFor.py
for x in range(10)
	print(4)